--- a/scss/misc.scss
+++ b/scss/misc.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: myFont;
-  src: url(./subway-ticker.regular.ttf);
+  src: url(./fonts/subway-ticker.regular.ttf);
 }
 
 p {
