--- a/css/tetris.css
+++ b/css/tetris.css
@@ -45,7 +45,7 @@
 
 @font-face {
   font-family: myFont;
-  src: url(/subway-ticker.regular.ttf);
+  src: url(./fonts/subway-ticker.regular.ttf);
 }
 
 p {
@@ -75,8 +75,8 @@ body {
 
 .stuff {
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   margin-top: 50px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -97,11 +97,11 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 }
 
 #gameboard {
